--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,16 +6,12 @@ h3 {
   padding: 1rem 0;
 }
 
-.rating span {
-  margin: 0.1rem;
+h1 {
+  font-size: 2.5rem;
+  padding: 1rem 0;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1200px) {
-  .product-page-section {
-    min-width: 350px;
-  }
-
-  .product-page-section:nth-child(3) {
-    margin: 20px 0 0 50%;
-  }
+h2 {
+  font-size: 1.4rem;
+  padding: 0.5rem 0;
 }
